[package]
name = "pa_queue_and_chan"
version = "0.1.0"
edition = "2021"
description="some different type of queues and chans"
license="MIT"
repository="https://github.com/ActivePeter/pa_queue_and_chan"
keywords=["queue","channel"]
categories=["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-option = "0.1.2"
rand = "0.8.5"
crossbeam = "0.8"
smallvec = "1.10.0"
event-listener = "2.5.1"
priority-queue = "1.3.0"

[dev-dependencies]
criterion = "0.4.0"
tokio = {version="1.24.2", features = ["full"] }

[[bench]]
name = "bench_mpsc"
harness = false

